--- a/bank_marketing.ipynb
+++ b/bank_marketing.ipynb
@@ -213,7 +213,7 @@
     }
    ],
    "source": [
-    "df_bank.shape # 45211 rows and 17 columns"
+    "df_bank.shape "
    ]
   },
   {
@@ -647,7 +647,6 @@
     }
    ],
    "source": [
-    "#filter by sex\n",
     "df_bank_filter_edu_tertiary = (df_bank['education']=='tertiary') & (df_bank['loan']=='yes') & (df_bank['marital']=='married')\n",
     "df_bank.loc[df_bank_filter_edu_tertiary,['education','marital','loan']]"
    ]
@@ -989,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "11aa70a7",
+   "id": "c65cab7d",
    "metadata": {
     "scrolled": true
    },
@@ -1210,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4732847f",
+   "id": "0468a282",
    "metadata": {},
    "outputs": [
     {
@@ -1470,22 +1469,6 @@
     "column_names = pd.DataFrame(df_bank.columns, columns = [\"cols\"])\n",
     "column_names"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4f66aca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a23a510",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
